[gd_scene load_steps=21 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://oai.gd" type="Script" id=2]
[ext_resource path="res://xai.gd" type="Script" id=3]
[ext_resource path="res://mainScripts/21.gd" type="Script" id=4]
[ext_resource path="res://mainScripts/22.gd" type="Script" id=5]
[ext_resource path="res://asets/grid.png" type="Texture" id=6]
[ext_resource path="res://asets/hinted-Geomanist-Book.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://mainScripts/00.gd" type="Script" id=8]
[ext_resource path="res://mainScripts/01.gd" type="Script" id=9]
[ext_resource path="res://mainScripts/10.gd" type="Script" id=10]
[ext_resource path="res://mainScripts/02.gd" type="Script" id=11]
[ext_resource path="res://mainScripts/11.gd" type="Script" id=12]
[ext_resource path="res://mainScripts/12.gd" type="Script" id=13]
[ext_resource path="res://mainScripts/20.gd" type="Script" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 150
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Theme" id=6]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="grid" type="Sprite" parent="."]
position = Vector2( 544.834, 266.856 )
scale = Vector2( 0.549707, 0.576923 )
texture = ExtResource( 6 )

[node name="00" type="LineEdit" parent="grid"]
margin_left = -512.094
margin_top = -335.921
margin_right = -56.0941
margin_bottom = -184.921
rect_scale = Vector2( 1.01482, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 1
placeholder_alpha = 0.492
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="01" type="LineEdit" parent="grid"]
margin_left = -237.961
margin_top = -326.318
margin_right = 218.039
margin_bottom = -175.318
rect_scale = Vector2( 1.01482, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 1
placeholder_alpha = 0.492
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="02" type="LineEdit" parent="grid"]
margin_left = 18.0302
margin_top = -307.112
margin_right = 474.03
margin_bottom = -156.112
rect_scale = Vector2( 1.01482, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 1
placeholder_alpha = 0.492
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="LineEdit" parent="grid"]
margin_left = -518.141
margin_top = -80.4816
margin_right = -62.1411
margin_bottom = 70.5184
rect_scale = Vector2( 1.01482, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 1
placeholder_alpha = 0.492
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="11" type="LineEdit" parent="grid"]
margin_left = -237.961
margin_top = -78.561
margin_right = 218.039
margin_bottom = 72.439
rect_scale = Vector2( 1.01482, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 1
placeholder_alpha = 0.492
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="12" type="LineEdit" parent="grid"]
margin_left = 30.1242
margin_top = -86.2434
margin_right = 486.124
margin_bottom = 64.7566
rect_scale = Vector2( 1.01482, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 1
placeholder_alpha = 0.492
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="20" type="LineEdit" parent="grid"]
margin_left = -512.094
margin_top = 153.831
margin_right = -56.094
margin_bottom = 304.831
rect_scale = Vector2( 1.01482, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 1
placeholder_alpha = 0.492
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="21" type="LineEdit" parent="grid"]
margin_left = -254.087
margin_top = 167.275
margin_right = 201.913
margin_bottom = 318.275
rect_scale = Vector2( 1.01482, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 1
placeholder_alpha = 0.492
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="22" type="LineEdit" parent="grid"]
margin_left = 28.1086
margin_top = 182.64
margin_right = 484.109
margin_bottom = 333.64
rect_scale = Vector2( 1.01482, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 1
placeholder_alpha = 0.492
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xai" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
script = ExtResource( 3 )

[node name="oai" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
script = ExtResource( 2 )

[node name="StartBT" type="Button" parent="."]
margin_left = 333.926
margin_top = 519.841
margin_right = 770.926
margin_bottom = 590.841
rect_pivot_offset = Vector2( -283.966, -234.064 )
theme = SubResource( 6 )
text = "start Xai vs Oai"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 74.7934
margin_top = 64.2961
margin_right = 191.793
margin_bottom = 189.296
text = "player vs Oai"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="grid00" from="." to="grid/00" method="_grid00"]
[connection signal="grid01" from="." to="grid/01" method="_grid01"]
[connection signal="grid02" from="." to="grid/02" method="_grid02"]
[connection signal="grid10" from="." to="grid/10" method="_grid10"]
[connection signal="grid11" from="." to="grid/11" method="_grid11"]
[connection signal="grid12" from="." to="grid/12" method="_grid12"]
[connection signal="grid20" from="." to="grid/20" method="_grid20"]
[connection signal="grid21" from="." to="grid/21" method="_grid21"]
[connection signal="grid22" from="." to="grid/22" method="_grid22"]
[connection signal="toOai" from="." to="oai" method="_toOai"]
[connection signal="toXai" from="." to="xai" method="_toXai"]
[connection signal="winOai" from="." to="oai" method="_winOai"]
[connection signal="winXai" from="." to="xai" method="_winXai"]
[connection signal="new_input" from="grid/00" to="." method="_new_input"]
[connection signal="text_changed" from="grid/00" to="grid/00" method="_on_LineEdit_text_changed"]
[connection signal="new_input" from="grid/01" to="." method="_new_input"]
[connection signal="text_changed" from="grid/01" to="grid/01" method="_on_LineEdit_text_changed"]
[connection signal="new_input" from="grid/02" to="." method="_new_input"]
[connection signal="text_changed" from="grid/02" to="grid/02" method="_on_LineEdit_text_changed"]
[connection signal="new_input" from="grid/10" to="." method="_new_input"]
[connection signal="text_changed" from="grid/10" to="grid/10" method="_on_LineEdit_text_changed"]
[connection signal="new_input" from="grid/11" to="." method="_new_input"]
[connection signal="text_changed" from="grid/11" to="grid/11" method="_on_LineEdit_text_changed"]
[connection signal="new_input" from="grid/12" to="." method="_new_input"]
[connection signal="text_changed" from="grid/12" to="grid/12" method="_on_LineEdit_text_changed"]
[connection signal="new_input" from="grid/20" to="." method="_new_input"]
[connection signal="text_changed" from="grid/20" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="grid/20" to="grid/20" method="_on_LineEdit_text_changed"]
[connection signal="new_input" from="grid/21" to="." method="_new_input"]
[connection signal="text_changed" from="grid/21" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="grid/21" to="grid/21" method="_on_LineEdit_text_changed"]
[connection signal="new_input" from="grid/22" to="." method="_new_input"]
[connection signal="text_changed" from="grid/22" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="grid/22" to="grid/22" method="_on_LineEdit_text_changed"]
[connection signal="xaiMove" from="xai" to="." method="_xaiMove"]
[connection signal="oaiMove" from="oai" to="." method="_oaiMove"]
[connection signal="button_down" from="StartBT" to="grid/00" method="_on_StartBT_button_down"]
[connection signal="button_down" from="StartBT" to="grid/01" method="_on_StartBT_button_down"]
[connection signal="button_down" from="StartBT" to="grid/02" method="_on_StartBT_button_down"]
[connection signal="button_down" from="StartBT" to="grid/10" method="_on_StartBT_button_down"]
[connection signal="button_down" from="StartBT" to="grid/11" method="_on_StartBT_button_down"]
[connection signal="button_down" from="StartBT" to="grid/12" method="_on_StartBT_button_down"]
[connection signal="button_down" from="StartBT" to="grid/20" method="_on_StartBT_button_down"]
[connection signal="button_down" from="StartBT" to="grid/21" method="_on_StartBT_button_down"]
[connection signal="button_down" from="StartBT" to="grid/22" method="_on_StartBT_button_down"]
[connection signal="button_up" from="StartBT" to="." method="_StartBT"]
[connection signal="button_down" from="Button" to="." method="playerVsOai"]
